Fixes bug with distorted images on different screen heights

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -66,12 +66,14 @@ header {
     height: 100%;
 }
 .swiper-slide  {
-    width: 1000px;
+    width: 100%;
     height: 100%;
+
+    overflow: hidden;
 }
 .swiper-slide img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 
